--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "@uiw/react-markdown-preview": "^5.1.3",
+    "countries-list": "^3.1.1",
+    "install": "^0.13.0",
+    "lucide-react": "^0.460.0",
+    "npm": "^10.9.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.28.0",
+    "recharts": "^2.13.3"
   }
 }
